Dungeon: refactor MonsterFactory into Builder  (#2362)
Dieser PR entfernt die MonsterFactory und tauscht sie durch Builder aus.
Das macht den ganzen kram deutlich schöner in der Verwendung.


Es gibt einen Nachteil:
In Java dürfen Enums nicht erben, heißt für uns: In den SubProjekten
brauchen wir eigenen Enums und damit Builder.
Das ist auf der einen Seite ganz cool, weil ich das Enum in meinen
SubProjekt für mich anpassen kann, aber aktuell habe ich verdammt viel
duplizierten/sehr ähnlichen Code.

Man könnte überlegen ein Interface `IMonsterType` anzulegen, dass alle
Monster-Enums implementieren.
Das Interface fordert dann einen haufen getter für das Zeug das ich
brauche.
Und dann hab ich irgendwo ne Factory-Methode der ich das `IMonsterType`
Objekt gebe und eine Entität zurück kriege.
Im Builder rufe ich dann die Factory-Methode auf und mach danach noch
Sub-Projekt spezifischen kram.
Das verhindert duplizierten Code (!!!) aber es ist wieder so
verschachtelt und unlesbar.

---------

Co-authored-by: David Vehlow <david.vehlow@fh-bielefeld.de>
Co-authored-by: Flamtky <niklas.schumann+github@proton.me>